[package]
name = "brix"
version = "0.1.0"
authors = [
  "Miapolis <41233357+Miapolis@users.noreply.github.com>",
  "Caleb Cushing <xenoterracide@gmail.com>"
]
edition = "2018"

[[bin]]
bench = false
path = "crates/brix_core/main.rs"
name = "brix"

[workspace]
members = [
    "crates/brix_cli",
    "crates/brix_commands",
    "crates/brix_config_loader",
    "crates/brix_errors",
    "crates/brix_processor",
]

[dependencies]
brix_cli = { path = "crates/brix_cli" }
brix_commands = { path = "crates/brix_commands" }
brix_config_loader = { path = "crates/brix_config_loader" }
brix_errors = { path = "crates/brix_errors" }
colored = "2.0.0"

[dev-dependencies.cargo-husky]
version = "^1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-for-all"]

