[package]
authors = [
  "Ethan Lerner <ethan@lerners.io>",
  "Caleb Cushing <xenoterracide@gmail.com>",
]
categories = ["command-line-utilities", "code-generator"]
description = "Brix is a CLI tool written in Rust for scaffolding and code generation."
documentation = "https://docs.rs/brix"
edition = "2018"
homepage = "https://github.com/miapolis/brix"
keywords = ["cli", "codegen"]
license = "MIT"
name = "brix"
readme = "README.md"
repository = "https://github.com/miapolis/brix"
version = "0.3.3"

[[bin]]
bench = false
name = "brix"
path = "crates/brix_core/main.rs"

[workspace]
members = [
  "crates/brix_cli",
  "crates/brix_commands",
  "crates/brix_common",
  "crates/brix_config_loader",
  "crates/brix_errors",
  "crates/brix_processor",
]

[dependencies]
brix_cli = {version = "0.3.3", path = "crates/brix_cli"}
brix_commands = {version = "0.1.1", path = "crates/brix_commands"}
brix_common = {version = "0.1.1", path = "crates/brix_common"}
brix_config_loader = {version = "0.1.1", path = "crates/brix_config_loader"}
brix_errors = {version = "0.1.1", path = "crates/brix_errors"}
brix_processor = {version = "0.1.1", path = "crates/brix_processor"}
colored = "2.0.0"
home = "0.5.3"
log = "0.4.14"
simple_logger = "2.1.0"

[build-dependencies]
clap = "2.33.3"

[dev-dependencies.cargo-husky]
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-for-all"]
version = "^1"
