[package]
authors = [
  "Ethan Lerner <ethan@lerners.io>",
  "Caleb Cushing <xenoterracide@gmail.com>",
]
edition = "2018"
name = "brix_cli"
version = "0.3.0"

[dependencies]
brix_errors = {path = "../../crates/brix_errors", version = "0.1.0"}
colored = "2.0.0"
dialoguer = "0.8.0"
log = "0.4.14"

[dependencies.clap]
default-features = false
features = ["suggestions", "color"]
version = "2.33.3"
