[package]
authors = [
  "Ethan Lerner <ethan@lerners.io>",
  "Caleb Cushing <xenoterracide@gmail.com>",
]
description = "Brix's CLI clap interface."
edition = "2018"
homepage = "https://github.com/xenoterracide/brix"
license = "MIT"
name = "brix_cli"
version = "0.4.0"

[dependencies]
brix_errors = {path = "../../crates/brix_errors", version = "0.1.1"}
colored = "2.0.0"
dialoguer = "0.10"
log = "0.4.14"

[dependencies.clap]
default-features = false
features = ["suggestions", "color"]
version = "2.33.3"
