[package]
authors = [
  "Ethan Lerner <ethan@lerners.io>",
  "Caleb Cushing <xenoterracide@gmail.com>",
]
edition = "2018"
name = "brix_commands"
version = "0.1.0"

[dependencies]
brix_cli = {path = "../../crates/brix_cli"}
brix_common = {path = "../brix_common"}
brix_errors = {path = "../brix_errors"}
brix_processor = {path = "../brix_processor"}
colored = "2.0.0"
dialoguer = "^0"
execute = "0.2.9"
fancy-regex = "0.7.0"
log = "^0"
serde = {version = "1.0.126", features = ["derive"]}
validator = {version = "^0", features = ["derive"]}

[dev-dependencies]
maplit = "1.0.2"
pretty_assertions = "^0"
spectral = "^0"
