[package]
authors = [
  "Ethan Lerner <ethan@lerners.io>",
  "Caleb Cushing <xenoterracide@gmail.com>",
]
description = "Brix's command crate for storing all supported commands."
edition = "2018"
homepage = "https://github.com/miapolis/brix"
license = "MIT"
name = "brix_commands"
version = "0.1.1"

[dependencies]
brix_cli = {path = "../../crates/brix_cli", version = "0.3.3"}
brix_common = {path = "../brix_common", version = "0.1.1"}
brix_errors = {path = "../brix_errors", version = "0.1.1"}
brix_processor = {path = "../brix_processor", version = "0.1.1"}
colored = "2.0.0"
dialoguer = "^0"
execute = "0.2.9"
fancy-regex = "0.7.0"
log = "^0"
serde = {version = "1.0.126", features = ["derive"]}
validator = {version = "0.14.0", features = ["derive"]}

[dev-dependencies]
maplit = "1.0.2"
pretty_assertions = "^0"
spectral = "^0"
