[package]
authors = [
  "Ethan Lerner <ethan@lerners.io>",
  "Caleb Cushing <xenoterracide@gmail.com>",
]
description = "Brix's command crate for storing all supported commands."
edition = "2018"
homepage = "https://github.com/xenoterracide/brix"
license = "MIT"
name = "brix_commands"
version = "0.1.1"

[dependencies]
brix_cli = {path = "../../crates/brix_cli", version = "0.4"}
brix_common = {path = "../brix_common", version = "0.1.1"}
brix_errors = {path = "../brix_errors", version = "0.2"}
brix_processor = {path = "../brix_processor", version = "0.1.1"}
colored = "2"
dialoguer = "^0"
fs_extra = "^1"
execute = "0.2.9"
fancy-regex = "0.7"
log = "^0"
serde = {version = "1", features = ["derive"]}
validator = {version = "0.14", features = ["derive"]}

[dev-dependencies]
maplit = "1.0.2"
pretty_assertions = "^0"
spectral = "^0"
