[package]
authors = [
  "Ethan Lerner <ethan@lerners.io>",
  "Caleb Cushing <xenoterracide@gmail.com>",
]
description = "Common utilities and functions for Brix."
edition = "2018"
homepage = "https://github.com/miapolis/brix"
license = "MIT"
name = "brix_common"
version = "0.2.0"

[dependencies]
brix_cli = {path = "../brix_cli", version = "0.4.0" }
brix_processor = {path = "../brix_processor", version = "0.2.0" }
