[package]
name = "brix_config_loader"
version = "0.1.0"
authors = ["Miapolis <41233357+Miapolis@users.noreply.github.com>"]
edition = "2018"

[dependencies]
brix_cli = { path = "../brix_cli" }
brix_commands = { path = "../brix_commands" }
brix_common = { path = "../brix_common" }
brix_errors = { path = "../brix_errors" }
brix_processor = { path = "../brix_processor" }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"
regex = "^1"
lazy_static = "1.4.0"
difflib = "0.4.0"
