[package]
authors = [
  "Ethan Lerner <ethan@lerners.io>",
  "Caleb Cushing <xenoterracide@gmail.com>",
]
description = "Brix's crate for loading and managing configs."
edition = "2018"
homepage = "https://github.com/miapolis/brix"
license = "MIT"
name = "brix_config_loader"
version = "0.1.2"

[dependencies]
brix_cli = {path = "../brix_cli", version = "0.3.3"}
brix_commands = {path = "../brix_commands", version = "0.2"}
brix_common = {path = "../brix_common", version = "0.1.1"}
brix_errors = {path = "../brix_errors", version = "0.2"}
brix_processor = {path = "../brix_processor", version = "0.2"}
difflib = "0.4.0"
lazy_static = "1.4.0"
regex = "^1"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
serde_yaml = "0.8.17"
