[package]
authors = [
  "Ethan Lerner <ethan@lerners.io>",
  "Caleb Cushing <xenoterracide@gmail.com>",
]
description = "Brix's crate for handling all application-related errors."
edition = "2018"
homepage = "https://github.com/xenoterracide/brix"
license = "MIT"
name = "brix_errors"
version = "0.1.1"

[dependencies]
clap = "2.33.3"
fancy-regex = "0.7.0"
handlebars = "4.1.0"
serde_yaml = "0.8.17"
validator = "0.14.0"
fs_extra = "^1"
