[package]
authors = [
  "Ethan Lerner <ethan@lerners.io>",
  "Caleb Cushing <xenoterracide@gmail.com>",
]
description = "Brix's simple wrapper around handlebars with added helpers."
edition = "2018"
homepage = "https://github.com/xenoterracide/brix"
license = "MIT"
name = "brix_processor"
version = "0.1.3"

[dependencies]
brix_errors = {path = "../../crates/brix_errors", version = "0.2"}
convert_case = "0.6"
handlebars = "4.1.0"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
titlecase = "2"
log = "0.4.20"

[dev-dependencies]
lazy_static = "1.4.0"
